cli_err_utf8.txt
cargo : warning: unused import: `Path`
At line:1 char:1
+ cargo check -p cli > cli_err.txt 2>&1; 
Get-Content cli_err.txt | Out- ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (warn  
  ing: unused import: `Path`:String) [], Remote    
Exception
    + FullyQualifiedErrorId : NativeCommandError
 
 --> crates\extractors\src\fbref.rs:3:17
  |
3 | use std::path::{Path, PathBuf};
  |                 ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of 
`#[warn(unused)]`) on by default

warning: unused imports: `Context` and `Result`
 --> crates\extractors\src\official.rs:1:14
  |
1 | use anyhow::{Result, Context};
  |              ^^^^^^  ^^^^^^^

warning: unused import: `csv::ReaderBuilder`
 --> crates\extractors\src\clubelo.rs:3:5
  |
3 | use csv::ReaderBuilder;
  |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `Path`
 --> crates\extractors\src\sofifa.rs:3:17
  |
3 | use std::path::{Path, PathBuf};
  |                 ^^^^

warning: unused import: `anyhow::Result`
  --> crates\extractors\src\lib.rs:14:5
   |
14 | use anyhow::Result;
   |     ^^^^^^^^^^^^^^

warning: fields `client` and `base_url` are never 
read
 --> crates\extractors\src\official.rs:5:5
  |
4 | pub struct OfficialApiExtractor {
  |            -------------------- fields in this 
struct
5 |     client: Client,
  |     ^^^^^^
6 |     base_url: String,
  |     ^^^^^^^^
  |
  = note: `#[warn(dead_code)]` (part of 
`#[warn(unused)]`) on by default

warning: `extractors` (lib) generated 6 warnings 
(run `cargo fix --lib -p extractors` to apply 5 
suggestions)
    Checking cli v0.1.0 
(C:\Dev\Repos\football-dq\crates\cli)
error[E0432]: unresolved imports 
`extractors::matchhistory::MatchhistoryExtractor`, 
`extractors::matchhistory::MatchhistoryConfig`
 --> crates\cli\src\main.rs:6:32
  |
6 | use 
extractors::matchhistory::{MatchhistoryExtractor, 
MatchhistoryConfig};
  |                                
^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^ no 
`MatchhistoryConfig` in `matchhistory`
  |                                |
  |                                no 
`MatchhistoryExtractor` in `matchhistory`
  |
help: a similar name exists in the module
  |
6 - use 
extractors::matchhistory::{MatchhistoryExtractor, 
MatchhistoryConfig};
6 + use 
extractors::matchhistory::{MatchHistoryExtractor, 
MatchhistoryConfig};
  |
help: a similar name exists in the module
  |
6 - use 
extractors::matchhistory::{MatchhistoryExtractor, 
MatchhistoryConfig};
6 + use 
extractors::matchhistory::{MatchhistoryExtractor, 
MatchHistoryConfig};
  |

error[E0433]: failed to resolve: use of unresolved 
module or unlinked crate `domain`
  --> crates\cli\src\main.rs:65:17
   |
65 |     let _pool = 
domain::db::init_db(db_url).await?;
   |                 ^^^^^^ use of unresolved 
module or unlinked crate `domain`
   |
   = help: if you wanted to use a crate named 
`domain`, use `cargo add domain` to add it to your 
`Cargo.toml`

error[E0061]: this method takes 2 arguments but 1 
argument was supplied
  --> crates\cli\src\main.rs:90:39
   |
90 |                     let _ = 
extractor.read_schedule(force_cache).await?;
   |                                       
^^^^^^^^^^^^^------------- argument #2 of type 
`bool` is missing
   |
note: method defined here
  --> crates\extractors\src\understat.rs:55:18
   |
55 |     pub async fn read_schedule(&self, 
_include_matches_without_data: bool, force_cache: 
bool) -> Result<Vec<String>> {
   |                  ^^^^^^^^^^^^^
help: provide the argument
   |
90 |                     let _ = 
extractor.read_schedule(force_cache, /* bool 
*/).await?;
   |                                               
                 ++++++++++++

Some errors have detailed explanations: E0061, 
E0432, E0433.
For more information about an error, try `rustc 
--explain E0061`.
error: could not compile `cli` (bin "cli") due to 
3 previous errors
